Fix styling on mobile devices

--- a/style.scss
+++ b/style.scss
@@ -447,6 +447,10 @@ blockquote {
   padding: 2em;
   text-align: center;
 
+  @media screen and (max-width: 600px), screen and (max-device-width: 600px) {
+    padding: 1em;
+  }
+
   #test-entry {
     display: block;
   }
